Fix horizontal scrolling on settings page

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -47,6 +47,16 @@ html.wp-toolbar {
 	width: 100%;
 }
 
+.elasticpress_page_elasticpress-settings #wpbody {
+	overflow-x: hidden;
+
+	& #update-nag,
+	& .update-nag,
+	& .ep-header-menu {
+		margin-left: 0;
+	}
+}
+
 h2.ep-list-features {
 	display: none;
 }
